<resources>
    <string name="app_name">Tour Mate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event name</string>
    <string name="departure_place">Departure place</string>
    <string name="destination">Destination</string>
    <string name="initial_budget">Initial budget</string>
    <string name="select_departure_date">select departure date</string>
    <string name="create_new_event">create new event</string>
    <string name="events">Events</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="weather_api_key">a8c0b1a782fe191d17d048b2f0b15503</string>
    <string name="weather_api_key2">d0b941339d6f075686460c7fe0912041</string>
    <string name="weather_api_key3">f4f1e513f8351f02420cfcc85fc08378</string>
    <string name="weather_api_key4">31b114dfbba8a5d3500917b2515db196</string>
    <string name="weather_api_key5">d0b941339d6f075686460c7fe0912041</string>
</resources>

